# typeflow

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  test.yml
src/: lib.rs  main.rs
