[package]
name = "typeflow"
version = "0.1.0"
edition = "2024"
authors = ["Daisuke Takayama <info@webcyou.com>"]
description = "A simple letter feed crate."
license = "MIT"
repository = "https://github.com/webcyou-org/typeflow"
homepage = "https://github.com/webcyou-org/typeflow"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
